Update with Bidirectional

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,12 @@ dependencies {
     compileOnly 'org.apache.tomcat:annotations-api:6.0.53'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+
+    // logger SLF4J
+    implementation 'io.codearte.jfairy:jfairy:0.5.9'
+    implementation 'org.slf4j:slf4j-simple:1.7.30'
+    //jmDNS
+    implementation group: 'org.jmdns', name: 'jmdns', version: '3.5.1'
 }
 
 sourceSets.main.java.srcDir new File(buildDir, 'generated/source')
